--- a/css/style.css
+++ b/css/style.css
@@ -44,37 +44,42 @@ body, html {
     background-color: #ddd;
 }
 
-.interests-grid, .projects-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
     gap: 20px;
-    padding: 20px;
 }
 
-.interest, .project {
-    background: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+.flex-item {
+    flex: 1;
+    min-width: 300px; /* 确保在小屏幕上项目可以堆叠起来 */
 }
 
-.interest:hover, .project:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 12px 16px rgba(0,0,0,0.2);
+.interests ul, .projects {
+    list-style: none;
+    padding: 0;
+}
+
+.project {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 20px;
 }
 
 .project img {
-    width: 100%;
-    border-radius: 8px 8px 0 0;
+    width: 100px; /* 根据需要调整 */
+    height: 100px; /* 根据需要调整 */
     object-fit: cover;
 }
 
 .section {
+    padding: 20px;
     background: rgba(255, 255, 255, 0.8);
     margin: 20px;
     border-radius: 8px;
 }
+
 
 .footer {
     background-color: #333;
